--- a/IDbDataRecordExtentionsLib/IDbDataRecordExtentionsLib/IDbDataRecordExtentionsLib.csproj
+++ b/IDbDataRecordExtentionsLib/IDbDataRecordExtentionsLib/IDbDataRecordExtentionsLib.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>IDbDataRecordExtentionsLib</RootNamespace>
     <AssemblyName>IDbDataRecordExtentionsLib</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
